-구글 로그인 (오류 있음) -StartActivity에서 인증이 성공하면 Main으로 넘어가게 설계했음 (인증이 안되서 Main으로 못넘어 가고 있다)
in Mainactivity
 - tab 별로 다른 root로 접근
 - 아직 firebase 접근해서 data 읽어 오진 못함
 - 읽어온 data들 뿌려줄 list view작성
 - inflater로 생성한 각각의 list 레이아웃에 button에 tag와 함께 묶어서 저장
 (생화학연구실에서의 '자세히'버튼과 바이러스학 연구실 또는 기초과학연구소의 '자세히' 버튼과 구분하기 위해)

 firebase
 -데이타배이스 구축함
 -sort 해서 검색하는 기능이 있다는데 아직 사용하지 못하겠음

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,15 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+
+    //인증기능을 담당하는 파이어베이스 인증모듈 의존시켜야
+    //구글 플레이 서비스- 인증기능 역시 의존시켜야합니다.
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
